syntax = "proto3";
package cometbft.crypto.v1;

option go_package = "github.com/cometbft/cometbft/api/cometbft/crypto/v1";

import "gogoproto/gogo.proto";

// PublicKey defines the keys available for use with Validators
message PublicKey {
  option (gogoproto.compare) = true;
  option (gogoproto.equal)   = true;

  oneof sum {
    bytes ed25519   = 1;
    bytes secp256k1 = 2;
  }
}
